<?xml version="1.0"?>

<!-- This file is only used to enable the building librealsense2 -->
<!-- as a debian package for use with ROS (http://ros.org) -->
<!-- via catkin_make (which invokes cmake) -->

<package format="2">
  <name>librealsense2</name>
  <!-- The version tag needs to be updated with each new release of librealsense -->
  <version>2.20.0</version>
  <description>
  Library for capturing data from the Intel(R) RealSense(TM) SR300, D400 Depth cameras and T2xx Tracking devices. This effort was initiated to better support researchers, creative coders, and app developers in domains such as robotics, virtual reality, and the internet of things. Several often-requested features of RealSense(TM); devices are implemented in this project.
  </description>

  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>

  <url type="website">https://github.com/IntelRealSense/librealsense/</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <author email="mark.d.horn@intel.com">Mark Horn</author>
  <author email="reagan.lopez@intel.com">Reagan Lopez</author>
  <author email="itay.carpis@intel.com">Itay Carpis</author>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>libusb-1.0-dev</depend>
  <depend>linux-headers-generic</depend>
  <depend>libssl-dev</depend>
  <depend>dkms</depend>
  <depend>udev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
