<?xml version="1.0"?>

<!-- This file is only used to enable the building librealsense2 -->
<!-- as a debian package for use with ROS 2 (http://ros.org) -->
<!-- via ament_cmake (which invokes cmake) -->

<package format="2">
  <name>librealsense2</name>
  <!-- The version tag needs to be updated with each new release of librealsense -->
  <version>2.54.2</version>
  <description>
  Library for controlling and capturing data from the Intel(R) RealSense(TM) D400 devices.
  </description>

  <maintainer email="librs.ros@intel.com">LibRealSense ROS Team</maintainer>

  <url type="website">https://github.com/IntelRealSense/librealsense/</url>

  <author email="librs.ros@intel.com">LibRealSense ROS Team</author>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libssl-dev</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>dkms</build_depend>
  <build_depend>udev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
